fix error when defining decimal percentage